Add Tela de Menu
- Menu adicionado na tela principal
- Ajustes na tela de login

--- a/mobile/ChavesIME/app/src/main/res/values/strings.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Chaves IME</string>
     <string name="matricula">Matrícula</string>
     <string name="senha">Senha</string>
-    <string name="login">Login</string>
+    <string name="login">Entrar</string>
+    <string name="naoTenhoCadastro">Não tenho cadastro</string>
     <string name="preenchaCorretamente">Por favor, preencha os campos Matrícula e Senha corretamente.</string>
     <string name="usuarioNaoCadastrado">Usuário não cadastrado.</string>
 </resources>
