Correção de Design nas telas de Reserva e Cronograma; Adição de TimePicker para as escolhas de horário; Classe para implementação de multiplos Listeners

--- a/mobile/ChavesIME/app/src/main/res/values/strings.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/strings.xml
@@ -7,12 +7,17 @@
     <string name="preenchaCorretamente">Por favor, preencha os campos Matrícula e Senha corretamente.</string>
     <string name="usuarioNaoCadastrado">Usuário não cadastrado.</string>
     <string name="confirmarReserva">Confirmar Reserva</string>
-    <string name="horario">Horário:</string>
-    <string name="data">Data:</string>
+    <string name="horario">Horário</string>
+    <string name="horarioEntrada">Entrada</string>
+    <string name="horarioSaida">Saída</string>
+    <string name="data">Data</string>
     <string name="sala">Sala:</string>
     <string name="buscarCronograma">Buscar Cronograma</string>
     <string name="titleReservarSala">Reservar Sala</string>
     <string name="titleCronograma">Cronograma</string>
+    <string name="infoReserva">Informações da Reserva:</string>
+    <string name="selecioneData">selecione a data</string>
+    <string name="selecioneHora">selecione a hora</string>
 
 
     <string-array name="horarios_array">
