Alterações de design e correções de bugs
- Adicionada barra superior com nome do aplicativo para a tela de login
- Alteração do design da tela de listagem das salas
- Alteração dos cards de salas (adicionado ícone representando tipo da
sala e adicionado também a disponibilidade da sala)
- Correção de diversos bugs

--- a/mobile/ChavesIME/app/src/main/res/values/strings.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="buscarCronograma">Buscar Cronograma</string>
     <string name="titleReservarSala">Reservar Sala</string>
     <string name="titleCronograma">Cronograma</string>
+    <string name="disponivel">Disponível</string>
+    <string name="ocupada">Ocupada</string>
 
 
     <string-array name="horarios_array">
